--- a/Oversikt.ipynb
+++ b/Oversikt.ipynb
@@ -12,7 +12,8 @@
     "2 | [Intro til Python](02_Intro%20til%20Python.ipynb) | Andre undervisningstime\n",
     "3 | [Sinussignal](03_Sinussignal.ipynb) | Tema for hele uken\n",
     "4 | [Frekvensrepresentasjon](04_Frekvensrepresentasjon.ipynb) | Oppdatert tirsdag 2. februar\n",
-    "5 | [Sampling og Aliasing](05_Sampling%20og%20Aliasing.ipynb) | Utvides fredag 5. februar"
+    "5 | [Sampling og Aliasing](05_Sampling%20og%20Aliasing.ipynb) | Oppdatert fredag 5. februar\n",
+    "6 | [Diskrét Fouriertransformasjon](06_Diskrét%20Fouriertransformasjon.ipynb) | Utvides fredag 12. februar"
    ]
   }
  ],
