--- a/Oversikt.ipynb
+++ b/Oversikt.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Oversikt over forelesningsnotat\n",
     "\n",
-    "Ukenummer | Tema | Kommentar\n",
+    "Kalenderuke | Tema | Kommentar\n",
     "---|---|---\n",
     "2 | [Introduksjon](01_Introduksjon.ipynb) | Første undervisningstime - praktisk info m.m.\n",
     "2 | [Intro til Python](02_Intro%20til%20Python.ipynb) | Andre undervisningstime\n",
