Oversikt oppdatert for ny forelesning

--- a/Oversikt.ipynb
+++ b/Oversikt.ipynb
@@ -13,7 +13,8 @@
     "3 | [Sinussignal](03_Sinussignal.ipynb) | Tema for hele uken\n",
     "4 | [Frekvensrepresentasjon](04_Frekvensrepresentasjon.ipynb) | Oppdatert tirsdag 2. februar\n",
     "5 | [Sampling og Aliasing](05_Sampling%20og%20Aliasing.ipynb) | Oppdatert fredag 5. februar\n",
-    "6 | [Diskrét Fouriertransformasjon](06_Diskrét%20Fouriertransformasjon.ipynb) | Utvides fredag 12. februar"
+    "6 | [Diskrét Fouriertransformasjon](06_Diskrét%20Fouriertransformasjon.ipynb) | Oppdatert fredag 12. februar\n"
+    "7 | [Frekvensanalyse med DFT](07_Frekvensanalyse%20med%20DFT.ipynb) | Utvides fredag 19. februar"
    ]
   }
  ],
