--- a/07_Frekvensanalyse med DFT.ipynb
+++ b/07_Frekvensanalyse med DFT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -120,7 +120,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2ca169b60eae48e5bac1b440dbf5c542",
+       "model_id": "9153fb14d7b840e296974322fc926747",
        "version_major": 2,
        "version_minor": 0
       },
@@ -137,7 +137,7 @@
        "<StemContainer object of 3 artists>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -253,7 +253,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "21bda0d4e6ee4023bfaa20f575e7f3b7",
+       "model_id": "5128d88a938f4d7ba4209874d1fe021e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -267,7 +267,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8d2a52e67fb24563b0670e1946a256d4",
+       "model_id": "3665957f16fa482d801b0451d233828a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -281,7 +281,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "63cd2c22d6a5407db386810282cb36fa",
+       "model_id": "d727204022d14b61ac763a7535f0b614",
        "version_major": 2,
        "version_minor": 0
       },
@@ -347,13 +347,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "519d7192da2745508b979e9bc6caf783",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.legend.Legend at 0x2ab4e814e80>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "N =32\n",
     "n = np.arange(N)\n",
@@ -362,7 +387,7 @@
     "xw_n = x_n*w_n\n",
     "\n",
     "Xw_k = np.fft.fft(xw_n)\n",
-    "plt.close(5); plt.figure(5)\n",
+    "plt.close(5); plt.figure(5, figsize=(12,6))\n",
     "plt.stem(n, np.abs(Xw_k), label='Med Hann vindu')\n",
     "plt.stem(n, np.abs(np.fft.fft(x_n)), markerfmt='x', label='Uten vindusfunksjon')\n",
     "plt.legend()"
@@ -400,14 +425,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "28ff74ec94294ec0a447a15562d3fe34",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Generate signal\n",
+    "N =32\n",
+    "n = np.arange(N)\n",
+    "x_n = cos(pi/10*n)\n",
+    "\n",
+    "# Apply window\n",
+    "w_n = 0.5 - 0.5*cos(2*pi * n /(N-1))\n",
+    "xw_n = x_n*w_n\n",
+    "\n",
+    "# Apply zero padding\n",
+    "#xn_long = np.append(xw_n, np.zeros(N))\n",
+    "\n",
+    "# Compute DFT\n",
+    "Xk_long = np.fft.fft(xw_n, n=2*N)\n",
+    "Xk_long = np.fft.fftshift(Xk_long)\n",
+    "omega = np.arange(-N, N)/N\n",
+    "\n",
+    "# Create plot\n",
+    "plt.close(2); plt.figure(2, figsize=(12,6))\n",
+    "plt.stem(omega, np.abs(Xk_long), markerfmt='.')\n",
+    "plt.xlabel(r'Digital frekvens $\\hat{\\omega} \\ (\\times \\pi)$');\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Quiz:\n",
+    "* Et signal er samplet med samplingsfrekvens $f_s = 4000Hz$, og vi har plukket ut $N=1000$ sampler for å utføre frekvensanalyse. Hvor mange null-sampler må vi legge til for at DFT-sekvensen skal ha oppløsningsbåndbredde $\\Delta f = 1Hz$?"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -456,7 +530,7 @@
    "source": [
     "# Invers DTFT\n",
     "* Formel:\n",
-    "$$ x[n] = \\frac{1}{2\\pi} \\int_{-\\pi}^{\\pi}\\left(e^{j\\hat{\\omega}}\\right)\\cdot e^{j\\hat{\\omega}\\cdot n}$$\n",
+    "$$ x[n] = \\frac{1}{2\\pi} \\int_{-\\pi}^{\\pi}X\\left(e^{j\\hat{\\omega}}\\right)\\cdot e^{j\\hat{\\omega}\\cdot n}$$\n",
     "\n",
     "* Ettersom $X\\left(e^{j\\hat{\\omega}}\\right)$ er *kontinuerlig*, bruker vi her et *integral*.\n",
     "    * Deler på $2\\pi$ ettersom \"frekvens-spennet\" er $-\\pi < \\hat{\\omega} < \\pi$.\n",
@@ -501,7 +575,7 @@
     "# Signal som funksjon av deltapulser\n",
     "\n",
     "* Digitale signal kan skrives som en funksjon av deltapulser med ulik tidsforskyvning.\n",
-    "* Eksempel: $X[n] = \\{1, 2, 3, -3, 0, 3\\}$ kan besrkrives matematisk med følgende funksjon.\n",
+    "* Eksempel: $x[n] = \\{1, 2, 3, -2, 0, 2\\}$ kan besrkrives matematisk med følgende funksjon.\n",
     "$$x[n] = \\delta[n] + 2\\delta[n-1] + 3\\delta[n-2]-2\\delta[n-3]+2\\delta[n-5]$$\n",
     "\n",
     "<img src=\"Figurer/07_Frekvensanalyse/Fig7_eksempelsignal.png\" style=\"width: 80%; margin-left: 100px\" />"
@@ -600,15 +674,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b9691fdbb795424188ee6a74d8c97205",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "91659670d30146ffa62d2ebf62851bc6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatSlider(value=0.0, description='Digital Frekvens $\\\\hat{\\\\omega}\\\\ (\\\\times \\\\pi)$:', layou…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ac12224376bb4b29a66305f503270f23",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Kildekode._07_Frekvensanalyse.DTFT_demo at 0x2ab4e776fd0>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Video(\"Figurer/07_Frekvensanalyse/DTFT.mp4\", embed=True, width=1000)"
+    "w_n = np.ones(4)\n",
+    "DTFT_demo(w_n, fig_num = 5, figsize=(12,8))"
    ]
   },
   {
@@ -706,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -737,14 +865,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false,
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "071193cff40c41c58a82a10eb1879667",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "plt.close(6); plt.figure(6, figsize=(10,8))\n",
     "PlotWindow(32, 'hamming')"
@@ -758,9 +901,15 @@
     }
    },
    "source": [
-    "# Effektspekter\n",
-    "\n",
-    "<img src=\"Figurer/07_Frekvensanalyse/Fig17_PSD1.png\" style=\"width: 80%; margin-left=100px\" />"
+    "# Oppsummering vindusfunksjoner\n",
+    "* Vindusfunksjoner er et verktøy i frekvensanalyse som motvirker spektral lekkasje.\n",
+    "    * Dette gjøres ved å multiplisere signalvinduet med lengde $N$ sampler med en tilsvarende lang vindusfunksjon før utregning av DFT.\n",
+    "    * Vindusfunksjonen vil \"krympe\" signalsamplene mot starten og slutten av vinduet.\n",
+    "* DTFT av vindusfunksjonen forteller oss hvordan den spektrale lekkasjen vil utarte seg.\n",
+    "    * To målinger vi kan gjøre:\n",
+    "        1. Sidelobedemping\n",
+    "        2. Bredde av hovedlobe\n",
+    "    * Typisk en invers korrelasjon mellom overnevnte egenskaper."
    ]
   },
   {
@@ -771,53 +920,7 @@
     }
    },
    "source": [
-    "# Signalenergi og effekt\n",
-    "<img src=\"Figurer/07_Frekvensanalyse/Fig18_PSD2.png\" style=\"width: 80%; margin-left=100px\" />"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Periodogram\n",
-    "<img src=\"Figurer/07_Frekvensanalyse/Fig19_PSD4.png\" style=\"width: 80%; margin-left=100px\" />"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Kodeeksempel: frekvensanalyse av lydsignal\n",
-    "\n",
-    "* Regn ut effektspekteret til et utsnitt av signalet `orca.wav` som starter i $t=0.25s$.\n",
-    "    * Vi velger passende vinduslengde selv."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "fs, data = wavfile.read(r'Datafiler/04_Frekvensrepresentasjon/orca.wav') # les audiofilen 'orca.wav' og lagre til variablene 'fs' og 'data'\n",
-    "xn = data/0x8000\n",
-    "sig_len = len(xn)\n",
-    "n = np.arange(sig_len)\n",
-    "t = n/fs\n",
-    "plt.close(7); plt.figure(7, figsize=(10,3))\n",
-    "plt.plot(t, xn)"
+    "# Spørsmål?"
    ]
   }
  ],
