--- a/Oversikt.ipynb
+++ b/Oversikt.ipynb
@@ -14,7 +14,8 @@
     "4 | [Frekvensrepresentasjon](04_Frekvensrepresentasjon.ipynb) | Oppdatert tirsdag 2. februar\n",
     "5 | [Sampling og Aliasing](05_Sampling%20og%20Aliasing.ipynb) | Oppdatert fredag 5. februar\n",
     "6 | [Diskrét Fouriertransformasjon](06_Diskrét%20Fouriertransformasjon.ipynb) | Oppdatert fredag 12. februar\n",
-    "7 | [Frekvensanalyse med DFT](07_Frekvensanalyse%20med%20DFT.ipynb) | Utvides fredag 19. februar"
+    "7 | [Frekvensanalyse med DFT](07_Frekvensanalyse%20med%20DFT.ipynb) | Utvides fredag 19. februar",
+    "7 | [Effektspekter og Spektrogram](08_Effektspekter%20og%20Spektrogram.ipynb) | Utvides fredag 19. februar"
    ]
   }
  ],
