Oppdatrert tittel uke 10

--- a/Oversikt.ipynb
+++ b/Oversikt.ipynb
@@ -17,7 +17,7 @@
     "7 | [Frekvensanalyse med DFT](07_Frekvensanalyse%20med%20DFT.ipynb) | oppdatert 23. februar \n",
     "8 | [Effektspekter og Spektrogram](08_Effektspekter%20og%20Spektrogram.ipynb) | Oppdatert 26. februar \n",
 	"9 | [Oppsummeringsforelesning Signalanalyse](09_Oppsummeringsforelesning.ipynb) | Fredag 26. februar \n", 
-	"10 | [Digitale Filtre Intro](10_Digitale%20filtre%20intro.ipynb) | Tirsdag 2. mars "
+	"10 | [LTI-system, impulsrespons og konvolusjon](10_Digitale%20filtre%20intro.ipynb) | Tirsdag 2. mars "
    ]
   }
  ],
