Fixed figure ref

--- a/10_Digitale filtre intro.ipynb
+++ b/10_Digitale filtre intro.ipynb
@@ -137,7 +137,7 @@
     "* Fysiske elektroniske kretser.\n",
     "* Beskrives matematisk med en differensiallikning *(eller en transferfunksjon)*.\n",
     "* Eksempel: RLC-krets:\n",
-    "<img src=\"Figurer/10_Digitale Filtre Intro/Fig1_AnalogFilt.png\" style=\"width: 80%; margin-left=100px\" />"
+    "<img src=\"Figurer/10_Digitale Filtre Intro/Fig1_analogFilt.png\" style=\"width: 80%; margin-left=100px\" />"
    ]
   },
   {
