Lagt til forelesning om frekvensrespons

--- a/10_Digitale filtre intro.ipynb
+++ b/10_Digitale filtre intro.ipynb
@@ -79,6 +79,21 @@
     }
    },
    "source": [
+    "# Tema tirsdag 16. mars:\n",
+    "\n",
+    "* Repetisjon Impulsrespons\n",
+    "* Konvolusjon fortsettelse\n",
+    "* Sammensatte system"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "# Signal og System\n",
     "\n",
     "### Generell terminologi\n",
@@ -137,7 +152,7 @@
     "* Fysiske elektroniske kretser.\n",
     "* Beskrives matematisk med en differensiallikning *(eller en transferfunksjon)*.\n",
     "* Eksempel: RLC-krets:\n",
-    "<img src=\"Figurer/10_Digitale Filtre Intro/Fig1_analogFilt.png\" style=\"width: 80%; margin-left=100px\" />"
+    "<img src=\"Figurer/10_Digitale Filtre Intro/Fig1_AnalogFilt.png\" style=\"width: 80%; margin-left=100px\" />"
    ]
   },
   {
@@ -261,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -279,7 +294,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e04b0251c00b489dbef98bacde3a6812",
+       "model_id": "cfadc53a98c941b5afc858587cd8d082",
        "version_major": 2,
        "version_minor": 0
       },
@@ -293,10 +308,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x195f09a3ac0>]"
+       "Text(0, 0.5, 'Amplituderespons $\\\\left| H \\\\left( e^{j\\\\hat{\\\\omega}} \\\\right) \\\\right|$')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +333,9 @@
     "# (frekvensrespons o.l. vil utforskes i større detalj senere.)\n",
     "w, H = sig.freqz(b, a)\n",
     "plt.close(1); plt.figure(1)\n",
-    "plt.plot(w/pi, abs(H))"
+    "plt.plot(w/pi, abs(H))\n",
+    "plt.xlabel(r'Digital frekvens $\\hat{\\omega} \\ (\\times \\pi$)')\n",
+    "plt.ylabel(r'Amplituderespons $\\left| H \\left( e^{j\\hat{\\omega}} \\right) \\right|$')"
    ]
   },
   {
@@ -389,7 +406,7 @@
    "source": [
     "# Kausale LTI-system\n",
     "\n",
-    "* Vikgige egenskaper i signalbehandling\n",
+    "* Viktige egenskaper i signalbehandling\n",
     "* Realiserbare system med stor grad av fleksibilitet"
    ]
   },
@@ -646,7 +663,7 @@
     "* Impulsrespons:\n",
     "$$h[n] = F(\\delta[n])$$\n",
     "\n",
-    "* Arbitrært tgangssignal $y[n]$:\n",
+    "* Arbitrært utgangssignal $y[n]$:\n",
     "\\begin{align}\n",
     "y[n] &= F(x[n])\\\\\n",
     "     &= F\\left(\\sum_{k=-\\infty}^{\\infty} x[k]\\cdot \\delta[n-k]\\right)\\\\\n",
@@ -695,7 +712,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -776,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -786,7 +802,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7951ead41792434082599906dedc36be",
+       "model_id": "44df8d52084c47d283eee6f8c4d8e0d5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -800,12 +816,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "efa91b925fa3420dba129d218f63f92f",
+       "model_id": "93c5490bcd0e4078ac992b0c939d5573",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(IntSlider(value=0, description='Samplenummer $n$', layout=Layout(width='95%'), max=33, style=Sl…"
+       "VBox(children=(IntSlider(value=0, description='Samplenummer $n$', layout=Layout(width='95%'), max=31, style=Sl…"
       ]
      },
      "metadata": {},
@@ -814,7 +830,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "64dc1d602fbc4f889a7091d2d4043727",
+       "model_id": "612e36752cea49c2a7db40207a442d68",
        "version_major": 2,
        "version_minor": 0
       },
@@ -828,8 +844,8 @@
    ],
    "source": [
     "n = np.arange(30); xn = np.cos(pi/3*n) # Sinussekvens\n",
-    "hn = np.ones(5)/5                      # 5-punkts middelverdifilter\n",
-    "convolutionDemo(xn, hn, fig_num=2);    #figsize=(10,7)"
+    "hn = np.array([0.25, 0.5, 0.25])                      # 5-punkts middelverdifilter\n",
+    "convolutionDemo(xn, hn, fig_num=2,figsize=(10,7));    #"
    ]
   },
   {
@@ -915,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -925,7 +941,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ca135e95b6134cc799f476eccafb3899",
+       "model_id": "cdd3394e2cd24e8abec260ba7289dab7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -942,7 +958,7 @@
        "<StemContainer object of 3 artists>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -951,7 +967,7 @@
     "xn = np.ones(10) # x[n] = u[n]-u[n-10]\n",
     "hn = np.array([1, -1, 2, -1, 1]) # Fra regneeksempel 2\n",
     "yn = np.convolve(xn, hn)\n",
-    "plt.close(3);plt.figure(3)\n",
+    "plt.close(3);plt.figure(3, figsize=(8,3))\n",
     "plt.stem(yn)"
    ]
   },
